<resources>
    <string name="app_name">Car Plus App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_an_account"><u>צור חשבון כדי להתחבר אל המערכת</u></string>
    <string name="welcome_dear">ברוך הבא נציג יקר</string>
    <string name="you_bought_a_car">קנית רכב חדש?</string>
    <string name="connect">התחבר</string>
    <string name="create_account">צור חשבון</string>
    <string name="create_an_account_to_connect">צור חשבון על מנת להתחבר אל המערכת</string>
    <string name="full_name">שם מלא</string>
    <string name="agency">סוכנות</string>
    <string name="mobile">נייד</string>
    <string name="mail_adress">כתובת מייל</string>
    <string name="password">סיסמא</string>
    <string name="least_six_characters">שים לב: הסיסמא צריכה להכיל 6 תווים לפחות</string>
    <string name="confirm_password">אימות סיסמא</string>
    <string name="entrance">כניסה</string>
    <string name="connection">התחברות</string>
    <string name="enter_a_password">הזן סיסמא על מנת להתחבר אל המערכת</string>
    <string name="forgot_the_password"><u>שכחתי את הסיסמא</u></string>
    <string name="nis_per_month">119ש"ח לחודש</string>
    <string name="safety_package">SAFETY PACKAGE</string>
    <string name="choose_a_package">בחר חבילה ללקוח שלך</string>
    <string name="financing_company">בחר חברת מימון</string>
    <string name="choose">בחר</string>
    <string name="important"><u>חשוב!</u></string>
    <string name="installation_will_be">התקנה תתבצע בבית הלקוח או בבית העסק</string>
    <string name="billing">חיוב ללא תפיסת מסגרת יעשה לאחר ההתקנה</string>
    <string name="mobile_phone">טלפון נייד</string>
    <string name="car_manufacturer">יצרן רכב</string>
    <string name="model">דגם</string>
    <string name="car_number">מספר רכב</string>
    <string name="year_of_manufacture">שנת ייצור</string>
    <string name="installation_address">כתובת להתקנה</string>
    <string name="costumer_details">פרטי הלקוח</string>
    <string name="fill_the_customer_detail">אנא מלא את פרטי הלקוח</string>
    <string name="the_invitation">ההזמנה</string>
    <string name="done_successfully">בוצעה בהצלחה</string>
    <string name="packages_page">עמוד חבילות</string>
    <string name="enter_the_verification">הזן את קוד האימות שנלשח לנייד</string>
    <string name="verification_code">קוד אימות</string>
    <string name="approval">אישור</string>
    <string name="did_not_receive_a_code"><u>לא קיבלתי קוד - נסה שוב</u></string>
    <string name="enter_a_mobile_number">הזן מספר נייד לשליחת קוד אימות</string>
    <string name="send">שלח</string>
    <string name="choose_a_new_password">בחר סיסמא חדשה על מנת להתחבר</string>
    <string name="hello_kobe">שלום קובי</string>
    <string name="my_account">החשבון שלי</string>
    <string name="kobi_levy">קובי לוי</string>
    <string name="_00">000000000</string>
    <string name="lubinski">לובינסקי</string>
    <string name="a_password">סיסמא</string>
    <string name="orders">הזמנות</string>
    <string name="change_password">החלפת סיסמא</string>
    <string name="current_password">סיסמא נוכחית</string>
    <string name="new_password">סיסמא חדשה</string>
    <string name="convenience_package">CONVENIENCE PACKAGE</string>
    <string name="client">לקוח: בני מזרחי</string>
    <string name="vehicle_125_325_456"> רכב: 125-325-456</string>
    <string name="skoda_f600">Skoda F600 :דגם</string>
    <string name="_25_5_23">25.5.23</string>
    <string name="order_no">הזמנה מס: 01</string>
    <string name="blind_spot">BLIND SPOT | מוצרים</string>
    <string name="functions">פונקציות</string>
    <string name="temperature_range">עבודה בטווח טמפרטורה: 40°C~ + 85°C-</string>
    <string name="storage_in_temperature">אחסון בטווח טמפרטורה: 40°C~ + 85°C-</string>
    <string name="vertical_angle">זווית אנכית: 30 מעלות</string>
    <string name="horizontal_angle">זווית אופקית: 150 מעלות</string>
    <string name="system_for_identifying_dead_areas">BLIND SPOT -מערכת לזיהוי שטחים מתים</string>
    <string name="blind_spot_is_a_safety">מערכת ראדר לזיהוי שטחים מתים המורידה דרמטית את הסיכוי שלך להיות מעורב בתאונה בליינד ספוט היא מערכת בטיחות מבית איווקס, מבוססת טכנולוגיית רדאר ייחודית מהמתקדמות בעולם. המערכת מנטרת את השטחים המתים שהנהג לא יכול להבחין בהם ו/או לא זוכה לכיסוי מלא או אפקטיבי של המראות. BSD מתריעה באופן קולי וויזואלי כאשר כלי רכב, הולך רגל, אופניים, קורקינט או כל אובייקט אחר יכניס לאזור האחורי או צידי של הרכב.</string>
    <string name="products">מוצרים | ריפודי עור</string>
    <string name="leather_car_upholstery">John McQueen -ריפודי עור לרכב מבית</string>
    <string name="custom_made_leather">ריפודי העור של John McQueen בהתאמה אישית לרכב מספקים גם עמידות גבוהה נגד לכלוך ונזקי שמש, אך בעיקר מעניקים תחושה של נוחות ויוקרתיות בכל נסיעה. העור האיכותי מגיע אל מושבי הרכב שלך ישירות מאיטליה. יחד עם תיפורים מוקפדים וצבע רענן, הרכב יקבל מראה יוקרתי ואקסקלוסיבי.</string>
    <string name="specifications">מפרט טכני</string>
    <string name="refreshing_the_appearance">חידוש וריענון מראה הרכב בעזרת ריפודי עור תוצרת איטליה.</string>
    <string name="comfortable_seating">ישיבה נוחה עם תחושה יוקרתית, נעימה ומפנקת בכל נסיעה.</string>
    <string name="six_different_colors">שישה צבעים שונים לבחירה</string>
    <string name="possibility_to_choose_the_colors">אפשרות לבחירת צבעי התיפורים: שחור, לבן או בצבע הריפוד.</string>
    <string name="package_detail"><u>חבילת הבטיחות כוללת:</u></string>
    <string name="price_after_discount">-מחיר לאחר הנחה</string>
    <string name="orders_89">הזמנות 89</string>
    <string name="what_is_missing_in"><u>מה חסר בו?</u></string>
</resources>