<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.ConnectFragment">


    <ImageView
        android:id="@+id/ivMiniLogo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/mini_logo_" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ivMiniLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/welcome_dear"
                android:fontFamily="@font/blender_regular"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:background="#99FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/you_bought_a_car"
                android:fontFamily="@font/blender_black"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/blender_black"
                android:text="@string/what_is_missing_in"
                android:textColor="@color/white"
                android:textSize="35sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/btn_back"
                android:drawableStart="@drawable/arrow_back_ios"
                android:drawableTint="@color/white"
                android:paddingStart="20dp"
                android:paddingEnd="40dp"
                android:text="@string/connect"
                android:fontFamily="@font/blender_regular"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:fontFamily="@font/blender_regular"
                android:text="@string/create_an_account"
                android:textColor="@color/white"
                android:textSize="10sp" />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>