<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.PasswordFragment">

    <ImageView
        android:id="@+id/ivMiniLogo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/mini_logo_" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_below="@id/ivMiniLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:src="@drawable/profile_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:text="@string/connection"
                android:fontFamily="@font/blender_black"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/blender_regular"
                android:gravity="center"
                android:text="@string/choose_a_new_password"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="30dp"
                android:background="#99FFFFFF" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/field_back"
                android:ems="10"
                android:fontFamily="@font/blender_regular"
                android:hint="@string/password"
                android:inputType="text"
                android:minHeight="50dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textDirection="rtl"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/blender_regular"
                android:text="@string/least_six_characters"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/field_back"
                android:ems="10"
                android:fontFamily="@font/blender_regular"
                android:hint="@string/confirm_password"
                android:inputType="text"
                android:minHeight="50dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEnter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_back"
                android:drawableStart="@drawable/arrow_back_ios"
                android:drawableTint="@color/white"
                android:fontFamily="@font/blender_regular"
                android:paddingStart="20dp"
                android:paddingEnd="40dp"
                android:text="@string/connect"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </LinearLayout>
    </ScrollView>



</RelativeLayout>