<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".ui.CustomerFragment">


    <RelativeLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:gravity="center"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/arrow_back_ios"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/ivMiniLogo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-10dp"
            android:src="@drawable/mini_logo_" />

        <ImageView
            android:id="@+id/ivPhone"
            android:layout_width="66dp"
            android:layout_height="63dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ivView"
            android:layout_marginBottom="5dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/blender_regular"
            android:gravity="center"
            android:text="@string/costumer_details"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <View
            android:id="@+id/ivView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/ivPhone"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="30dp"
            android:background="#99FFFFFF" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/blender_regular"
                android:text="@string/fill_the_customer_detail"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/field_back"
                android:ems="10"
                android:fontFamily="@font/blender_regular"
                android:hint="@string/full_name"
                android:inputType="text"
                android:minHeight="50dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textDirection="rtl"
                android:textSize="12sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/field_back"
                android:ems="10"
                android:fontFamily="@font/blender_regular"
                android:hint="@string/mobile_phone"
                android:inputType="text"
                android:minHeight="50dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textDirection="rtl"
                android:textSize="12sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/field_back"
                android:ems="10"
                android:fontFamily="@font/blender_regular"
                android:hint="@string/mail_adress"
                android:inputType="text"
                android:minHeight="50dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textDirection="rtl"
                android:textSize="12sp" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/field_back"
                android:ems="10"
                android:fontFamily="@font/blender_regular"
                android:hint="@string/mobile"
                android:inputType="text"
                android:minHeight="50dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textDirection="rtl"
                android:textSize="12sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/field_back"
                android:ems="10"
                android:fontFamily="@font/blender_regular"
                android:hint="@string/car_manufacturer"
                android:inputType="text"
                android:minHeight="50dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textDirection="rtl"
                android:textSize="12sp" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/field_back"
                android:ems="10"
                android:fontFamily="@font/blender_regular"
                android:hint="@string/model"
                android:inputType="text"
                android:minHeight="50dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textDirection="rtl"
                android:textSize="12sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/field_back"
                android:ems="10"
                android:fontFamily="@font/blender_regular"
                android:hint="@string/car_number"
                android:inputType="text"
                android:minHeight="50dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textDirection="rtl"
                android:textSize="12sp" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/field_back"
                android:ems="10"
                android:fontFamily="@font/blender_regular"
                android:hint="@string/year_of_manufacture"
                android:inputType="text"
                android:minHeight="50dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textDirection="rtl"
                android:textSize="12sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/field_back"
                android:ems="10"
                android:fontFamily="@font/blender_regular"
                android:hint="@string/installation_address"
                android:inputType="text"
                android:minHeight="50dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textDirection="rtl"
                android:textSize="12sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEnter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_back"
                android:fontFamily="@font/blender_regular"
                android:text="הבא"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>



</RelativeLayout>